Fix minor ArchitectureTest violation